position_and_dimensions/demoCSS.css
body {
	background-color: gray;
}

#viewsMenu {
	/*height: 50px;*/
	height: 100px;
    bottom: 0px;
    background-color: #f5f5dc;
    position: fixed;
    width: 100%;
    left: 0px;
    border-top: 1px solid black;
}

/*#rulesMenu {
	width: 200px;
	height: calc(100% - 50px);
	background-color: #f5f5dc;
	position: fixed;
	right: 0px;
	top: 0px;
	border-left: 1px solid black;
}*/

#rightMenu {
	/*width: 200px;*/
	/*width: 400px;*/
	/*width: 420px;*/
	width: 480px;
	/*height: calc(100% - 50px);*/
	height: calc(100% - 100px);
	background-color: #f5f5dc;
	position: fixed;
	right: 0px;
	top: 0px;
	border-left: 1px solid black;
}

#toolsMenu {
	display: none;
}

#originalView {
	visibility: hidden;
}

.clone {
	margin: 10px;
}

#originalView {
	font-weight: bold;
}

.userPage {
	/*border: 2px solid black;*/
	position: absolute !important;
    left: 0px;
	top: 0px;
    width: 100%;
    /*max-width: calc(100% - 200px);*/
    /*max-width: calc(100% - 420px);*/
    max-width: calc(100% - 480px);
	/*height: calc(100% - 50px);
	max-height: calc(100% - 50px + 1px);*/
	height: calc(100% - 100px);
	max-height: calc(100% - 100px + 1px);
	background-color: white;
}

.userPageContent {
	width: 100%;
	height: 100%;
}

#userPageClone {
	visibility: hidden;
}

.modifiable {
	
}

.pageElement {
	/*position: absolute !important;*/
	position: absolute; /* Later on we'll need to make sure to include this in the returned rules/output of the system */
}

#elementPositionInfo {
	position: absolute;
	top: 10px;
	left: 10px;
	background-color: white;
	color: black;
	padding: 2px;
	border: 1px solid black;
}

#elementDimensionsInfo {
	position: absolute;
	bottom: 10px;
	right: 10px;
	background-color: white;
	color: black;
	padding: 2px;
	border: 1px solid black;
}

#pageDimensionsInfo {
	position: absolute;
	bottom: 10px;
	right: 10px;
	background-color: white;
	color: black;
	padding: 2px;
	border: 1px solid black;
}

/*.pageElement.ui-selected {
	border: 3px solid black;
}
.pageElement.ui-selecting {
	border: 3px solid black;
}*/

.pageElement.selected {
	-webkit-box-shadow: 0px 0px 2px 4px black;
  	-moz-box-shadow: 0px 0px 2px 4px black;
	box-shadow: 0px 0px 2px 4px black;
}

#selectedElementRules {
	display: none;
}

#amount {
	width: 100%;
}

.sliderWidget {
	margin: 10px;
}

/*#fontTools {
	margin-top: 20px;
}*/

.propertyWidget {
	/*max-width: 170px;
	min-width: 170px;*/
	max-width: 150px;
	min-width: 150px;
	/*padding-right: 10px;*/
}

/*.propertyTool {
	padding-top: 10px;
	padding-bottom: 10px;
	border-top: solid 1px #bbb;
}*/

.propertyInfo {
	padding-top: 10px;
	padding-bottom: 10px;
	border-top: solid 1px #bbb;
}

.propertyRules {
	z-index: 10;
}

#addDeleteButtonsArea {
	/*border-right: solid 1px #bbb;*/
	border-left: solid 1px #bbb;
	min-width: 225px;
	max-width: 225px;
	padding-top: 17px;
}

#cloneButton {
	display: none;
}

#viewOnlyArea {
	border-left: solid 1px #bbb;
	padding-top: 25px;
}

.keyframeButton {
	margin-top: 10px;
	margin-right: 10px;
	margin-left: 10px;
}




/* Some copied from jquery-ui: https://jqueryui.com/selectmenu/#custom_render */
fieldset {
  border: 0;
}

/* select with custom icons */
.ui-selectmenu-menu .ui-menu.customicons .ui-menu-item-wrapper {
  padding: 0.5em 0 0.5em 3em;
}
.ui-selectmenu-menu .ui-menu.customicons .ui-menu-item .ui-icon {
  height: 24px;
  width: 24px;
  top: 0.1em;
}
/*.ui-icon.video {
  background: url("images/24-video-square.png") 0 0 no-repeat;
}
.ui-icon.podcast {
  background: url("images/24-podcast-square.png") 0 0 no-repeat;
}
.ui-icon.rss {
  background: url("images/24-rss-square.png") 0 0 no-repeat;
}*/

.ui-icon.left-closed-right-closed {
  background: url("tool_icons/line_both_closed.png") 0 0 no-repeat;
  background-size: contain;
  width: 100% !important;
}
.ui-icon.left-closed-right-open {
  background: url("tool_icons/line_left_closed_right_open.png") 0 0 no-repeat;
  background-size: contain;
  width: 100% !important;
}
.ui-icon.left-open-right-closed {
  background: url("tool_icons/line_left_open_right_closed.png") 0 0 no-repeat;
  background-size: contain;
  width: 100% !important;
}

.propertyHeader {
	border-bottom: solid 2px;
}

.propertyRules .ui-selectmenu-button {
	width: 75px;
}

.propertyRules .ui-button {
	padding: 0px;
}

.transitionPiece {
	float: left;
}

.widgetsContainer {
	overflow-y: scroll;
	max-height: 655px;
	padding-left: 15px;
}

.rightWidgets { /* starts out hidden */
	display: none;
}

.bottomWidgets { /* starts out hidden */
	display: none;
}

[type='radio'] {
	font-size: 15px;
}

